--- a/src/scss/task-panel/task-detail.scss
+++ b/src/scss/task-panel/task-detail.scss
@@ -28,6 +28,7 @@
     color: $color-text4;
     background: $color-bg2;
     box-sizing: border-box;
+    transition: .5s background;
     //box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.75);
     button {
         position: relative;
@@ -56,6 +57,24 @@
             color: $color-text4;
             border: 1px solid $color-error;
         }
+    }
+    .warning__render-test {
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        padding: 24pt;
+        position: absolute;
+        font-size: 3.4vmin;
+        font-weight: 500;
+        box-sizing: border-box;
+        overflow-y: overlay;
+    }
+    &.warning {
+        background: $color-accent2 !important;
     }
 }
 
